--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -2,19 +2,24 @@
   "name": "nodeJs",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect ./src/index.js"
+    "start": "nodemon --inspect ./src/index.js -w",
+    "watch": "node-sass src/resoucre/scss/ --output src/public/css/ --watch --recursive",
+    "build-css": "node-sass-chokidar src/resoucre/scss/ -o src/public/css/ --source-map true",
+    "watch-css": "npm run build-css && chokidar 'src/resoucre/**/*.scss' -c 'npm run build-css' --polling"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar-cli": "^2.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.7"
   }
 }
