--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -4,18 +4,17 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect ./src/index.js -w",
-    "watch": "node-sass src/resoucre/scss/ --output src/public/css/ --watch --recursive",
-    "build-css": "node-sass-chokidar src/resoucre/scss/ -o src/public/css/ --source-map true",
-    "watch-css": "npm run build-css && chokidar 'src/resoucre/**/*.scss' -c 'npm run build-css' --polling"
+    "start": "nodemon --inspect ./src/app.js -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chokidar-cli": "^2.1.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.2"
+    "express-handlebars": "^5.3.2",
+    "mongoose": "^5.12.12"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
