--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.2",
     "chokidar-cli": "^2.1.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12"
   },
   "devDependencies": {
