react-hooks useEffect

--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.28.2",
     "chokidar-cli": "^2.1.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
